# ebook-tts-reader

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: pipeline-map.md
scripts/: benchmark_vllm_omni_qwen3_tts.py  download_qwen_models.py  run_booknlp_annotation_harness.py  smoke_qwen_tts.py  vllm_omni_qwen3_tts_16gb.yaml  vllm_omni_qwen3_tts_16gb_len16384.yaml  vllm_omni_qwen3_tts_16gb_len32768.yaml  vllm_omni_qwen3_tts_16gb_len8192_seq1.yaml  vllm_omni_qwen3_tts_16gb_len8192_seq2.yaml  vllm_omni_qwen3_tts_16gb_len8192_seq2_s0util020.yaml  vllm_omni_qwen3_tts_16gb_len8192_seq2_s0util026.yaml  vllm_omni_qwen3_tts_16gb_len8192_seq4.yaml
tests/: test_annotation_merge.py  test_annotation_prompts.py  test_annotation_service.py  test_anthropic_client_parsing.py  test_audio_and_tts.py  test_audiobook_controller.py  test_audiobook_generation.py  test_booknlp_annotation_harness.py  test_booknlp_artifacts.py  test_booknlp_candidates.py  test_cli.py  test_cli_benchmark_readalong.py  test_cli_window_sweep.py  test_debug_logging.py  test_domain_paths_json.py  test_end_to_end_fake_pipeline.py  test_epub_ingestion.py  test_global_registry_service.py  test_ingestion.py  test_pipeline_facade.py  test_public_import_and_config.py  test_quote_attribution.py  test_quote_consolidation.py  test_quote_extraction.py  test_qwen_adapter.py  test_read_along_session.py  test_read_along_units.py  test_read_along_web_app.py  test_readalong_book_package.py  test_registry_and_voice_identity.py  test_sentence_fallback.py  test_tts_script.py  test_ui_controller.py  test_ui_error_logging.py  test_vllm_omni_adapter.py  test_window_sweep.py  (+4 more)
(+103 files in other folders)
